--- a/help.html
+++ b/help.html
@@ -3,13 +3,13 @@
 <head>
 	<title>HELP</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
+
 	<script type="text/javascript" src="mds.js"></script>
-	
+
 	<link rel="stylesheet" href="rant.css">
-	
+
 	<link rel="icon" type="image/x-icon" href="./favicon.ico">
-	
+
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 	function gohome(){
 		window.location.href="index.html?uid="+MDS.form.getParams("uid");
 	}
-	
+
 </script>
 
 <center>
@@ -63,4 +63,5 @@ Happy Chatting!<br>
 
 </center>
 </body>
+<script src="./titlebar.js"></script>
 </html>
