made compiling the app easier

--- a/src/reply.html
+++ b/src/reply.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="mds.js"></script>
 	<link rel="stylesheet" href="rant.css">
 	<link rel="stylesheet" href="app.css">
-	<link rel="icon" type="image/x-icon" href="./chatter-icon.png">
+	<link rel="icon" type="image/x-icon" href="icon.png">
 </head>
 <body>
 	<section id="header"></section>
@@ -384,6 +384,6 @@
 		}
 
 	</script>
-	<script src="./titlebar.js"></script>
+	<script src="titlebar.js"></script>
 </body>
 </html>
