--- a/src/reply.html
+++ b/src/reply.html
@@ -173,7 +173,7 @@
 			{{/if}}
 			<div class="feed-item">
 				<div class="feed-item__heading">
-					<div class="feed-item__heading-title">
+					<div class="feed-item__heading-title" onclick="document.location.href='user.html?uid={{ uid }}&publicKey={{ publicKey }}'">
 						{{{ username }}}  {{#if isPosted}}{{#if superChatter}}<span class="superchatter"></span>{{/if}}  &#8226;&nbsp; <span class="text-secondary-grey">{{{ prettyPostedAt }}}</span>{{/if}}
 					</div>
 					<div class="feed-item__menu">
