--- a/src/docview.html
+++ b/src/docview.html
@@ -206,6 +206,26 @@
 										</svg>
 										Boost
 									</button>
+									<div class="button button--no-padding react">
+										<svg width="20px" height="20px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+											<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
+												<g id="thumbs-up" transform="translate(1.500000, 0.912349)" stroke="#FFFFFF" stroke-width="1.8">
+													<path d="M10.4998654,6.12492149 L10.4998654,2.62496635 C10.4998654,1.17523747 9.32462794,0 7.87489905,0 L4.37494392,7.87489905 L4.37494392,17.4998891 L14.2448174,17.4998891 C15.1174321,17.5096406 15.8639502,16.8751003 15.994795,16.0122947 L17.2022795,8.13739569 C17.2793275,7.6297756 17.1295654,7.11392901 16.7926609,6.72648882 C16.4557564,6.33904863 15.9657031,6.1191075 15.4523019,6.12492149 L10.4998654,6.12492149 Z M4.37494392,17.4997757 L1.74997757,17.4997757 C0.783491644,17.4997757 0,16.716284 0,15.7497981 L0,9.62487662 C0,8.6583907 0.783491644,7.87489905 1.74997757,7.87489905 L4.37494392,7.87489905" id="Shape"></path>
+												</g>
+											</g>
+										</svg>
+										React
+										<div class="react__container">
+											<div class="react__reactions">
+												<button onclick="react('{{ messageId }}', 'thumbs_up')" disabled="{{#if thumbs_up_locked}}true{{/if}}" class="react-reaction react_thumbs_up"></button>
+												<button onclick="react('{{ messageId }}', 'heart')" disabled="{{#if heart_locked}}true{{/if}}" class="react-reaction react_heart"></button>
+												<button onclick="react('{{ messageId }}', 'grinning_face')" disabled="{{#if grinning_face_locked}}true{{/if}}" class="react-reaction react_grinning_face"></button>
+												<button onclick="react('{{ messageId }}', 'sad')" disabled="{{#if sad_locked}}true{{/if}}" class="react-reaction react_sad"></button>
+												<button onclick="react('{{ messageId }}', 'shocked')" disabled="{{#if shocked_locked}}true{{/if}}" class="react-reaction react_shocked"></button>
+												<button onclick="react('{{ messageId }}', 'angry')" disabled="{{#if angry_locked}}true{{/if}}" class="react-reaction react_angry"></button>
+											</div>
+										</div>
+									</div>
 								</div>
 								<div class="feed-item__actions-right">
 									<a href="reply.html?uid={{ uid }}&msgid={{ messageId }}">
@@ -222,8 +242,49 @@
 							</div>
 						</div>
 					</div>
+
 				</div>
 			</div>
+			{{#if showReactions }}
+				<div class="feed-item-reaction">
+					{{#if thumbs_up }}
+						<div class="feed-item-reaction__item">
+							<div class="react-reaction react_thumbs_up"></div>
+							{{thumbs_up}}
+						</div>
+					{{/if }}
+					{{#if heart }}
+						<div class="feed-item-reaction__item">
+							<div class="react-reaction react_heart"></div>
+							{{heart}}
+						</div>
+					{{/if }}
+					{{#if grinning_face }}
+						<div class="feed-item-reaction__item">
+							<div class="react-reaction react_grinning_face"></div>
+							{{grinning_face}}
+						</div>
+					{{/if }}
+					{{#if sad }}
+						<div class="feed-item-reaction__item">
+							<div class="react-reaction react_sad"></div>
+							{{sad}}
+						</div>
+					{{/if }}
+					{{#if angry }}
+						<div class="feed-item-reaction__item">
+							<div class="react-reaction react_angry"></div>
+							{{angry}}
+						</div>
+					{{/if }}
+					{{#if shocked }}
+						<div class="feed-item-reaction__item">
+							<div class="react-reaction react_shocked"></div>
+							{{shocked}}
+						</div>
+					{{/if }}
+				</div>
+			{{/if}}
 		</script>
 
 		<script type="text/javascript" src="moment.js"></script>
@@ -255,7 +316,9 @@
 			}
 
 			async function walkchat(chatrow, depth){
-				var replymsg 	= await createMessageTable(chatrow,allsuperchatters,true,depth);
+				const children = await selectChildMessages(chatrow.MESSAGEID);
+				const reactions = await getReactions(children.rows);
+				var replymsg 	= await createMessageTable(chatrow,allsuperchatters,true,depth,reactions);
 
 				if (!replymsg) {
 					return;
@@ -302,9 +365,9 @@
 
 						//Create the reply table
 						var tree = createReplyTable(baseid,function(treemsg){
+
 							replytree = document.getElementById("replywindow");
 							mainwindow = document.getElementById("mainwindow");
-							console.log(treemsg);
 							walkchat(treemsg.toprant,1);
 
 							if (treemsg.toprant && treemsg.toprant.replies.length === 0) {
