updated emoji's with better resolution copies, fixed the issue with spaces in names when displaying a users posts, fixed issue where preview post button appears with empty spaces

--- a/src/reply.html
+++ b/src/reply.html
@@ -389,7 +389,7 @@
 
 				if (el && preview) {
 					el.addEventListener('keyup', function() {
-						if (this.value.length > 0) {
+						if (this.value.replace(/\s/gi, '').length > 0) {
 							return preview.style.display = 'block';
 						}
 
