--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>CHATTER</title>
+	<title>Chatter</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script type="text/javascript" src="purify.min.js"></script>
 	<script type="text/javascript" src="mds.js"></script>
@@ -46,17 +46,17 @@
 			</div>
 
 			<div id="has-contacts" style="display: none">
-				<div class="mb-5">Create your first post</div>
+				<div class="mb-5">Create your first post.</div>
 			</div>
 
 			<div id="invite-friends-android" class="mt-6" style="display: none">
-				<div class="mb-4">Create your first post</div>
+				<div class="mb-4">Create your first post.</div>
 				<div class="mb-5">The more the merrier, invite your friends to join...</div>
 				<button onclick="shareInvite()" class="button button--primary button--mx">Invite</button>
 			</div>
 
 			<div id="invite-friends-browser" class="mt-6" style="display: none">
-				<div class="mb-4">Create your first post</div>
+				<div class="mb-4">Create your first post.</div>
 				<div class="mb-5">The more the merrier, invite your friends to join...</div>
 				<button id="browser-share-button" onclick="copy(this)" class="button button--primary button--mx">Invite</button>
 			</div>
