--- a/src/user.html
+++ b/src/user.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>CHATTER</title>
+		<title>Chatter</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script type="text/javascript" src="purify.min.js"></script>
 		<script type="text/javascript" src="mds.js"></script>
